test/corpus/db_template.txt
=============
Simple quoted
=============

file "myDBfile.template" {
    pattern { PREFIX,     SCAN }
            { "P" "1 second"}
            { "P" "3 second"}
}

---

(source_file
 (db_template
  file: (string (quoted_string (quoted_string_text_fragment)))
  (substitutions
   (pattern
	(pattern_variables (identifier) (identifier))
	(pattern_values
	 (string (quoted_string (quoted_string_text_fragment)))
	 (string (quoted_string (quoted_string_text_fragment))))
	(pattern_values
	 (string (quoted_string (quoted_string_text_fragment)))
	 (string (quoted_string (quoted_string_text_fragment))))))))

===============
Simple unquoted
===============

file myDBfile.template {
    pattern { PREFIX,     SCAN }
            { P, "1 second"}
            { P, "3 second"}
}

---

(source_file
 (db_template
  file: (string)
  (substitutions
   (pattern
	(pattern_variables (identifier) (identifier))
	(pattern_values
	 (string)
	 (string (quoted_string (quoted_string_text_fragment))))
	(pattern_values
	 (string)
	 (string (quoted_string (quoted_string_text_fragment))))))))

=====================
Template with globals
=====================

global {A=1}
file myDBfile.template {
	global {A=1}
    pattern { B }
		global {A=1}
		{ 1 }
		global {A=1}
		{ 2 }
		global {A=1}
}

---

(source_file
 (global (definition variable: (identifier) value: (string)))
 (db_template
  file: (string)
  (substitutions
   (global (definition variable: (identifier) value: (string)))
   (pattern
	(pattern_variables (identifier))
    (global (definition variable: (identifier) value: (string)))
	(pattern_values (string))
    (global (definition variable: (identifier) value: (string)))
	(pattern_values (string))
    (global (definition variable: (identifier) value: (string)))))))
